fix crop category image on mobile

--- a/public/styles/site/layout.less
+++ b/public/styles/site/layout.less
@@ -539,16 +539,34 @@ a.carousel-control.right:hover {
   }
 }
 @media (max-width: 768px){
-  .project-image-container {
+  .category-col .project-image-container {
       height: 200px;
   }
-  .project-image-container img {
+  .category-col .project-image-container img {
       margin-top:-20%;
   }
-  .project-image-container img.mobo {
+  .category-col .project-image-container img.mobo {
       margin-top:0px;
   }
   .category-col {
     height: 266px;
+  }
+}
+@media (max-width: 600px){
+ 
+  .category-col .project-image-container img {
+      margin-top:-10%;
+  }
+ .category-col .project-image-container img.mobo {
+      margin-top:0px;
+  }
+}
+@media (max-width: 480px){
+ 
+  .category-col .project-image-container img {
+      margin-top:0px;
+  }
+ .category-col .project-image-container img.mobo {
+      margin-top:0px;
   }
 }
